@@ -1,2 +1,2 @@
-f90sources += actual_eos.f90
+F90sources += actual_eos.F90
 f90sources += eos_aux_data.f90
